Fix spacing around page-header

--- a/assets/stylesheets/zilker/sections.scss
+++ b/assets/stylesheets/zilker/sections.scss
@@ -1,5 +1,7 @@
 section {}
-
+.page-header + .page-section {
+  padding-top: 0;
+}
 .page-section {
   margin-top: 1em;
   margin-bottom: 3em;
